# pg_tpch

./: CMakeLists.txt
src/: pg_tpch--1.0.sql  pg_tpch.cpp  pre_prepare.sql
src/tpch/: tpch_dsdgen.cpp  tpch_wrapper.cpp
src/tpch/include/: tpch_wrapper.hpp
src/tpch/schema/: customer.sql  lineitem.sql  nation.sql  orders.sql  part.sql  partsupp.sql  region.sql  supplier.sql
